# tango4-replayviewer

./: Cargo.toml
.github/workflows/: release.yaml
linux/: build.sh
macos/: build.sh
mgba/mgba-sys/: build.rs
mgba/src/: log.rs
tango-replayviewer/: Cargo.toml
tango-replayviewer/src/: config.rs  patch.rs
tango-replayviewer/src/graphics/: offscreen.rs
tango-replayviewer/src/gui/session_view/: replay_controls_window.rs
tango-signaling-server/: worker-configuration.d.ts
tango-signaling-server/src/proto/: signaling.d.ts  signaling.js
tango4-replayviewer/: Cargo.toml
tango4-replayviewer/locales/en-US/: common.ftl  replays.ftl
tango4-replayviewer/src/: gui.rs  main.rs  session.rs
tango4-replayviewer/src/graphics/: glutin.rs
tango4-replayviewer/src/gui/: replays_pane.rs  session_view.rs
win/: build.sh
