[package]
name = "tango-replayviewer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "tango-replayviewer"

[features]
default = ["glutin", "cpal", "sdl2-audio"]
sdl2-audio = []
glutin = ["dep:glutin", "dep:egui_glow"]
cpal = ["dep:cpal"]
wgpu = ["dep:wgpu", "dep:egui-wgpu"]

[dependencies]
anyhow = "1"
arboard = "3.5"
bps = { path = "../bps" }
bytemuck = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cpal = { version = "0.16", optional = true }
egui = { version = "0.31.1" }
egui-wgpu = { version = "0.31.1", features = ["winit"], optional = true }
egui-winit = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
egui_glow = { version = "0.31.1", features = [
  "winit",
  "clipboard",
  "links"
], optional = true }
env_logger = "0.9"
fluent-templates = "0.8"
glow = "0.16"
glutin = { version = "0.32", optional = true }
glutin-winit = "0.5"
hqx = { path = "../hqx" }
image = { version = "0.25", features = ["png"] }
input-helper = { path = "../input-helper" }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
mailparse = "0.13"
mgba = { path = "../mgba" }
mmpx = { path = "../mmpx" }
open = "3"
parking_lot = { version = "0.12" }
pollster = "0.4"
regex = "1.6"
rfd = "0.15"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
slotmap = "1"
steamlocate = "2"
tango-dataview = { path = "../tango-dataview" }
tango-gamedb = { path = "../tango-gamedb" }
tango-pvp = { path = "../tango-pvp" }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.5"
unic-langid = { version = "0.9", features = ["likelysubtags"] }
walkdir = "2"
wgpu = { version = "24.0.3", optional = true, features = ["angle"] }
winit = { version = "0.30.11", features = ["serde"] }
zip = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
sdl2 = { version = "0.37", features = ["static-link", "bundled"] }

[lints]
workspace = true
